Cycles viewport render stuck with stereoscopic viewport #62582

Closed
opened 2019-03-14 18:14:24 +01:00 by Vitor Balbio · 17 comments

System Information
Operating system: Windows 10
Graphics card: GeForce GTX 970

Blender Version
Broken: version: 2.80
Worked: Last stable 2.79

Short description of error
When using the Stereo Rendering the Viewport flicks between the two eyes and render just one sample for each one. That not happen in blender 2.79 or at the Multi View

Exact steps for others to reproduce the error
Turn On the stereoscopy StereoBug.blend

**System Information** Operating system: Windows 10 Graphics card: GeForce GTX 970 **Blender Version** Broken: version: 2.80 Worked: Last stable 2.79 **Short description of error** When using the Stereo Rendering the Viewport flicks between the two eyes and render just one sample for each one. That not happen in blender 2.79 or at the Multi View **Exact steps for others to reproduce the error** Turn On the stereoscopy [StereoBug.blend](https://archive.blender.org/developer/F6823214/StereoBug.blend)
Author

Added subscriber: @vitorbalbio-3

Added subscriber: @vitorbalbio-3

#74458 was marked as duplicate of this issue

#74458 was marked as duplicate of this issue

#73018 was marked as duplicate of this issue

#73018 was marked as duplicate of this issue

#69119 was marked as duplicate of this issue

#69119 was marked as duplicate of this issue

#67384 was marked as duplicate of this issue

#67384 was marked as duplicate of this issue

Added subscriber: @dfelinto

Added subscriber: @dfelinto

Please specify the exactly hash of the 2.80 build you are testing. That said I don't think I can reproduce it. Is there any errors in your console window?

Please specify the exactly hash of the 2.80 build you are testing. That said I don't think I can reproduce it. Is there any errors in your console window?
Author

Hash: 2d4a4fa0c1.
There are no errors in the console
A sample of the problem:
WLdfngHB3I.mp4

Hash: 2d4a4fa0c1b6. There are no errors in the console A sample of the problem: [WLdfngHB3I.mp4](https://archive.blender.org/developer/F6823768/WLdfngHB3I.mp4)

Added subscriber: @brecht

Added subscriber: @brecht

Known issue from #54180 (Cycles Blender 2.8 tasks), but will remove it there and leave it as a tracker bug.

Known issue from #54180 (Cycles Blender 2.8 tasks), but will remove it there and leave it as a tracker bug.
Brecht Van Lommel changed title from Stereo Flipping Eyes in Viewport and never rendering more than 1 sample to Cycles viewport render stuck with stereoscopic viewport 2019-03-14 19:59:42 +01:00

Added subscribers: @RKiselevich, @zeauro

Added subscribers: @RKiselevich, @zeauro

Added subscriber: @sundriftproductions

Added subscriber: @sundriftproductions

Added subscribers: @SecuoyaEx, @Jeroen-Bakker, @sebastian_k

Added subscribers: @SecuoyaEx, @Jeroen-Bakker, @sebastian_k

In 2.79, Blender Internal and Cycles were only rendering Left Side. None was doing Stereoscopic render in Rendered View.
Difference in 2.8 is that EEVEE is able to handle that in Rendered View.

So, probably, the permission for EEVEE to handle that is at the origin of problem for Cycles.

In 2.79, Blender Internal and Cycles were only rendering Left Side. None was doing Stereoscopic render in Rendered View. Difference in 2.8 is that EEVEE is able to handle that in Rendered View. So, probably, the permission for EEVEE to handle that is at the origin of problem for Cycles.

Added subscriber: @Renderbicks

Added subscriber: @Renderbicks

This issue was referenced by a696053545

This issue was referenced by a696053545e9e5c50302da668b9fd2f7c8edc605

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Brecht Van Lommel self-assigned this 2020-03-20 16:16:27 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62582
No description provided.