Python API: add bl_use_stereo_viewport for RenderEngine

To indicate if the render engine supports rendering a stereo 3D viewport.
This is not currently supported for Cycles.

Fixes T62582